--- a/ros_ws/src/ros_gz_project_template/ros_gz_example_bringup/config/x3_ekf.yaml
+++ b/ros_ws/src/ros_gz_project_template/ros_gz_example_bringup/config/x3_ekf.yaml
@@ -33,7 +33,7 @@ ekf_filter_node:
         # Debug settings. Not for the faint of heart. Outputs a ludicrous amount of information to the file specified by
         # debug_out_file. I hope you like matrices! Please note that setting this to true will have strongly deleterious
         # effects on the performance of the node. Defaults to false if unspecified.
-        debug: true
+        debug: false
 
         # Defaults to "robot_localization_debug.txt" if unspecified. Please specify the full path.
         debug_out_file: /home/benjamin/robot_localization_debug.txt
@@ -76,10 +76,20 @@ ekf_filter_node:
         # sensor_msgs/Imu). To add an input, simply append the next number in the sequence to its "base" name, e.g., odom0,
         # odom1, twist0, twist1, imu0, imu1, imu2, etc. The value should be the topic name. These parameters obviously have no
         # default values, and must be specified.
-
-
+        odom0: x3/odometry
+        
+        odom0_config: [true,  true,  true,
+                       false, false, false,
+                       false, false, false,
+                       false, false, false,
+                       false, false, false]
+        odom0_queue_size: 2
+        odom0_differential: false
+        odom0_relative: false
+        
+        
         imu0: x3/imu0
-        imu0_config: [false, false, false,
+        imu0_config: [true, true, true,
                       false, false, false,
                       false, false, false,
                       true,  true,  true,
@@ -95,7 +105,7 @@ ekf_filter_node:
         imu0_remove_gravitational_acceleration: true
 
         imu1: x3/imu1
-        imu1_config: [false, false, false,
+        imu1_config: [true, true, true,
                       false, false, false,
                       false, false, false,
                       true,  true,  true,
