--- a/ros_ws/src/ros_gz_project_template/ros_gz_example_bringup/config/x3_ekf.yaml
+++ b/ros_ws/src/ros_gz_project_template/ros_gz_example_bringup/config/x3_ekf.yaml
@@ -76,9 +76,9 @@ ekf_filter_node:
         # sensor_msgs/Imu). To add an input, simply append the next number in the sequence to its "base" name, e.g., odom0,
         # odom1, twist0, twist1, imu0, imu1, imu2, etc. The value should be the topic name. These parameters obviously have no
         # default values, and must be specified.
-        odom0: x3/odometry
+        odom0: kiss/odometry
         
-        odom0_config: [true,  true,  true,
+        odom0_config: [true,  true,  false,
                        false, false, false,
                        false, false, false,
                        false, false, false,
@@ -87,9 +87,19 @@ ekf_filter_node:
         odom0_differential: false
         odom0_relative: false
         
+        #odom1: x3/altimeter/pose
+        #odom1_config: [false,  false,  true,
+        #               false, false, false,
+        #               false, false, false,
+        #               false, false, false,
+        #               false, false, false]
+        #odom1_queue_size: 2
+        #odom1_differential: false
+        #odom1_relative: false
         
+
         imu0: x3/imu0
-        imu0_config: [true, true, true,
+        imu0_config: [true, true, false,
                       false, false, false,
                       false, false, false,
                       true,  true,  true,
@@ -105,7 +115,7 @@ ekf_filter_node:
         imu0_remove_gravitational_acceleration: true
 
         imu1: x3/imu1
-        imu1_config: [true, true, true,
+        imu1_config: [true, true, false,
                       false, false, false,
                       false, false, false,
                       true,  true,  true,
