--- a/ros_ws/src/ros_gz_project_template/x3_bt/package.xml
+++ b/ros_ws/src/ros_gz_project_template/x3_bt/package.xml
@@ -1,26 +1,18 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>x3_pathing</name>
+  <name>x3_bt</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="benjamin@todo.todo">benjamin</maintainer>
   <license>TODO: License declaration</license>
 
-  <test_depend>ament_copyright</test_depend>
-  <test_depend>ament_flake8</test_depend>
-  <test_depend>ament_pep257</test_depend>
-  <test_depend>python3-pytest</test_depend>
-
   <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>rclpy</depend>
-  <depend>rosidl_default_generators</depend>
-  <depend>rosidl_default_runtime</depend> 
-  <depend>rclpy_action</depend>
-  <exec_depend>rclpy</exec_depend>
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <export>
-    <build_type>ament_python</build_type>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
