behavior tree functional

--- a/ros_ws/src/ros_gz_project_template/x3_interfaces/CMakeLists.txt
+++ b/ros_ws/src/ros_gz_project_template/x3_interfaces/CMakeLists.txt
@@ -1,13 +1,11 @@
-cmake_minimum_required(VERSION 3.5)
-project(x3_pathing)
-#CMake so .action file will gen into cpp and python
+cmake_minimum_required(VERSION 3.8)
+project(x3_interfaces)
+
 find_package(ament_cmake REQUIRED)
-find_package(rclpy REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "action/SetHeight.action"
-  DEPENDENCIES std_msgs  #
 )
 
 ament_package()
