--- a/ros_ws/src/ros_gz_project_template/x3_bt/CMakeLists.txt
+++ b/ros_ws/src/ros_gz_project_template/x3_bt/CMakeLists.txt
@@ -1,26 +1,39 @@
 cmake_minimum_required(VERSION 3.8)
 project(x3_bt)
 
-if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  add_compile_options(-Wall -Wextra -Wpedantic)
+# Use C++17
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 17)
 endif()
 
-# find dependencies
+# --- Dependencies ---
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclcpp_action REQUIRED)
+find_package(nav2_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(behaviortree_cpp REQUIRED)
+find_package(behaviortree_ros2 REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+find_package(x3_interfaces REQUIRED)
 
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
-  set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
-  set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
-endif()
+# --- Executable ---
+add_executable(bt src/bt.cpp)
+
+ament_target_dependencies(bt
+  rclcpp
+  rclcpp_action
+  nav2_msgs
+  geometry_msgs
+  behaviortree_cpp
+  behaviortree_ros2
+  x3_interfaces
+)
+
+# --- Install target ---
+install(TARGETS
+  bt
+  DESTINATION lib/${PROJECT_NAME}
+)
 
 ament_package()
