--- a/ros_ws/src/ros_gz_project_template/x3_pathing/package.xml
+++ b/ros_ws/src/ros_gz_project_template/x3_pathing/package.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0"?>
-<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>x3_pathing</name>
   <version>0.0.0</version>
@@ -7,18 +6,19 @@
   <maintainer email="benjamin@todo.todo">benjamin</maintainer>
   <license>TODO: License declaration</license>
 
+  <buildtool_depend>ament_cmake</buildtool_depend>
+  <member_of_group>rosidl_interface_packages</member_of_group>
+  <depend>rclpy_action</depend>
+  <depend>rosidl_default_generators</depend>
+  <depend>rosidl_default_runtime</depend>
+  <depend>std_msgs</depend>
+
+  <exec_depend>rclpy</exec_depend>
+
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
-
-  <buildtool_depend>ament_cmake</buildtool_depend>
-
-  <depend>rclpy</depend>
-  <depend>rosidl_default_generators</depend>
-  <depend>rosidl_default_runtime</depend> 
-  <depend>rclpy_action</depend>
-  <exec_depend>rclpy</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
